# LightlyShaders-Plasma6

./: CMakeLists.txt  README.md  README_zh.md
src/: CMakeLists.txt
src/blur/: CMakeLists.txt  blur.cpp  blur.h  metadata.json
src/blur/kcm/: CMakeLists.txt  blur_config.cpp
src/liblshelper/: CMakeLists.txt  lshelper.cpp  lshelper.h
src/lightlyshaders/: CMakeLists.txt  lightlyshaders.cpp  lightlyshaders.h  lightlyshaders.json  lightlyshaders.qrc  lightlyshaders_config.kcfg  lightlyshaders_config.kcfgc
src/lightlyshaders/kcm/: CMakeLists.txt  lightlyshaders_config.ui  lightlyshaders_kcm.cpp  lightlyshaders_kcm.h
src/lightlyshaders/shaders/: lightlyshaders.frag  lightlyshaders_core.frag
